<resources>
    <string name="app_name">FavoriteTwitterSearches</string>
    <string name="action_settings">Settings</string>
    <string name="searchURL">http://search.twitter.com/search?q=</string>
    <string name="queryPrompt">Введите поисковый запрос</string>
    <string name="tagPrompt">Назначьте тег запросу</string>
    <string name="taggedSearch">Тегированные поиски</string>
    <string name="edit">Изменить</string>
    <string name="clearTags">Очистить теги</string>
    <string name="save">Сохранить</string>
    <string name="erase">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="OK">ОК</string>
    <string name="missingTitle">Текст отсутствует</string>
    <string name="missingMessage">Введите текст запроса и назначьте ему тег</string>
    <string name="confirmTitle">Вы уверены?</string>
    <string name="confirmMessage">Сейчас будут удалены все сохраненные поисковые запросы</string>

</resources>
